--- a/src/app/admin/article-manager/view-article/view-article.component.css
+++ b/src/app/admin/article-manager/view-article/view-article.component.css
@@ -466,3 +466,12 @@
   table.table td a.delete {
     color: #E34724;
   }
+
+  
+/*  */
+.search{
+  height: 36px;
+  width: 230px;
+    margin-right: 8px;
+   border-radius: 31px;
+}
