--- a/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
+++ b/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
@@ -9,7 +9,7 @@
                         <img id="anh" class="img-profile img-circle img-responsive " src="{{customer?.image}}" alt="">
                         <ul class="meta list list-unstyled">
                             <!-- TÊN người dùng -->
-                            <li class="name">{{customer?.name}}
+                            <li style=" color: #111111;" class="name">{{customer?.name}}
                                 <!-- CHỨC VỤ -->
                                 <!-- <label class="label label-info" *ngIf="customer?.">Admin</label> -->
                             </li>
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="content-panel">
-                    <h1 class="title">CHI TIẾT NGƯỜI DÙNG</h1>
+                    <h1 style="color: #111111;" class="title">CHI TIẾT NGƯỜI DÙNG</h1>
 
                     <div class="form-group">
                       <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
@@ -28,7 +28,7 @@
                   </div>
                     <form class="form-horizontal">
                         <fieldset class="fieldset">
-                            <h3 class="fieldset-title">Thông tin cá nhân </h3>
+                            <h3 style="font-size: 1.75rem; color: #111111;" class="fieldset-title">Thông tin cá nhân </h3>
                             <!-- MÃ người dùng -->
                             <div class="form-group">
                               <label class="col-md-2 col-sm-3 col-xs-12 control-label">Mã người dùng: </label> 
@@ -78,7 +78,7 @@
                             </div> 
                         </fieldset>
                         <fieldset class="fieldset">
-                            <h3 class="fieldset-title">Thông tin liên hệ</h3>
+                            <h3 style="font-size: 1.75rem; color: #111111;" class="fieldset-title">Thông tin liên hệ</h3>
 
                             <!-- Email -->
                             <div class="form-group">
