--- a/src/app/admin/customer-manager/view-customer/view-customer.component.css
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.css
@@ -469,3 +469,10 @@ table.table td a.delete {
   overflow: hidden;
   text-overflow: ellipsis;
 } */
+/*  */
+.search{
+  height: 36px;
+  width: 230px;
+    margin-right: 8px;
+   border-radius: 31px;
+}
