--- a/src/app/admin/newspaper-manager/create-newspaper/create-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/create-newspaper/create-newspaper.component.html
@@ -7,7 +7,7 @@
                 <div class="col-lg-7">
                     <div class="p-5">
                         <div class="text-center">
-                            <h1 class="h4 text-gray-900 mb-4">THÊM NHÂN VIÊN MỚI!</h1>
+                            <h1 class="h4 text-gray-900 mb-4">THÊM NHÂN TIN BÀI MỚI!</h1>
                         </div>
                         <form class="user" [formGroup]="newsPaperForm" enctype="multipart/form-data" (ngSubmit)="createNewsPaper()">
                             <div class="form-group">
