--- a/src/app/admin/staff-manager/create-staff/create-staff.component.css
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.css
@@ -64,3 +64,76 @@
 
 /*  */
 
+
+/*  */
+
+/* add staff photo editing */
+.user-info-image{
+  width: 165px;
+  height: 212px;
+  margin-top: -223px;
+  position: relative;
+   /* top: -165px;  */
+  left: -118px;
+  top: 240px;
+  border-radius: 10px;
+}
+
+.user-info-image>input{
+  display: none;
+}
+
+.user-info-image button{
+  position: relative;
+  bottom: 160px;
+  left: 30px;
+}
+
+/* CSS  role*/
+/* Reset Select */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 1px solid #CCCCCC;
+  background-image: none;
+
+}
+/* Custom Select */
+.select {
+  position: relative;
+  display: flex;
+  width: 38em;
+  height: 3em;
+  line-height: 3;
+  background: #fff;
+  overflow: hidden;
+  /* border: 1px solid #CCCCCC; */
+  border-radius: 10rem;
+}
+select {
+  flex: 1;
+  padding: 0 .5em;
+  cursor: pointer;
+}
+/* Arrow */
+.select::after {
+  content: '\25BC';
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  /* background: #34495e; */
+  cursor: pointer;
+  pointer-events: none;
+  -webkit-transition: .25s all ease;
+  -o-transition: .25s all ease;
+  transition: .25s all ease;
+}
+/* Transition */
+.select:hover::after {
+  color: #f39c12;
+}
