--- a/src/app/admin/newspaper-manager/update-newspaper/update-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/update-newspaper/update-newspaper.component.html
@@ -8,12 +8,11 @@
                     <div class="p-5">
                         <div class="user-info-image">
                             <label for="file-input">
-                                <img class="user-info-image" *ngIf="newpaperModel?.image == null || newpaperModel?.image == ''" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png">
-                                <img class="user-info-image" *ngIf="newpaperModel?.image" src="{{newpaperModel?.image}}">
+                                <img class="user-info-image" *ngIf="srcImg == null || srcImg == ''" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png">
+                                <img class="user-info-image" *ngIf="srcImg" src="{{srcImg}}">
                                 <span class="user-info-image" [ngStyle]="{'margin-left': '15px'}">Chọn lại ảnh bài viết</span>
                             </label>
                             <input id="file-input" type="file" (change)="getFiles($event)">
-                            <button class="btn btn-primary" (click)="uploadImage()" *ngIf="selectedFile != null">Update</button>
                         </div>  
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">CẬP NHẬT BÀI VIẾT</h1>
