--- a/src/app/admin/statistical/statistical-count-request/statistical-count-request.component.html
+++ b/src/app/admin/statistical/statistical-count-request/statistical-count-request.component.html
@@ -22,7 +22,7 @@
 
                 <div class="d-none d-md-block">
                     <div class="table-responsive">
-                        <table class="table table_post_listing table-bordered _table-hover">
+                        <table class="table table_post_listing table-bordered _table-hover table-striped table-striped">
                             <thead>
                                 <tr>
                                     <th [ngStyle]="{'text-align': 'center'}">Ngày/Tháng/Năm</th>
