--- a/src/app/admin/statistical/statistical-customer/statistical-customer.component.html
+++ b/src/app/admin/statistical/statistical-customer/statistical-customer.component.html
@@ -21,8 +21,8 @@
                 </div>
 
                 <div class="d-none d-md-block">
-                    <div class="table-responsive">
-                        <table class="table table_post_listing table-bordered _table-hover">
+                    <div class="table-responsive table-striped" >
+                        <table class="table table_post_listing table-bordered _table-hover table-striped">
                             <thead>
                                 <tr>
                                     <th [ngStyle]="{'text-align': 'center'}">Ngày/Tháng/Năm</th>
